# embedded_junk

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  array01.s  code0.s  collatz.s  compare01.s  exit_code.c  exit_code_s.s  first.s  load01.s  sizeof.c  sum02.s  xor01.s
